tests/snapshots/output/jobs__cancel.snap
---
source: tests/cli/snapshots.rs
---
$ vendo jobs cancel b0000001-0000-4000-8000-000000000001 --yes
exit: 0
--- stdout ---
Done: Job b0000001... cancelled.
