tests/snapshots/output/jobs__cancel_dry_run.snap
---
source: tests/cli/snapshots.rs
---
$ vendo jobs cancel b0000001-0000-4000-8000-000000000001 --dry-run
exit: 0
--- stdout ---
[dry-run] Would cancel job b0000001...
